feat: parses info field